# django-template

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
back/: urls.py  wsgi.py
back/apps/api/: apps.py  views.py
back/settings/: base.py  dev.py  prod.py
back/templates/: base.html
