[project]
name = "printech-back"
version = "0.2.0"
description = "Back-end for PrINTech."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==6.0.2",
    "django-debug-toolbar>=6.2.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.11",
]
